# ChangeLog for x11-plugins/wmgtemp
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmgtemp/ChangeLog,v 1.8 2005/02/27 12:25:19 brix Exp $

  27 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> wmgtemp-0.6.ebuild:
  Dependency update: sys-apps/lm-sensors -> sys-apps/lm_sensors.

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> wmgtemp-0.6.ebuild,
  wmgtemp-0.7.ebuild:
  add sed-4 dep

*wmgtemp-0.7 (16 Nov 2003)

  16 Nov 2003; Markus Nigbur <pyrania@gentoo.org> wmgtemp-0.7.ebuild:
  Version bump.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*wmgtemp-0.6 (07 Oct 2002)

  07 Oct 2002; Nick Hadaway <raker@gentoo.org> wmgtemp-0.6.ebuild,
  files/digest-wmgtemp-0.6 :
  New ebuild.  See bug #4888.  Added optimization and doc installation.