@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmgtemp/Attic/wmgtemp-0.7.ebuild,v 1.5 2005/02/27 12:25:19 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmgtemp/Attic/wmgtemp-0.7.ebuild,v 1.7 2005/11/10 09:13:51 s4t4n Exp $
 
 IUSE=""
 
@@ -12,7 +12,7 @@ LICENSE="Artistic"
 SLOT="0"
 KEYWORDS="x86 -ppc -sparc amd64"
 
-DEPEND="sys-apps/lm-sensors
+DEPEND="sys-apps/lm_sensors
 	>=sys-apps/sed-4"
 
 src_unpack() {
@@ -26,7 +26,7 @@ src_compile() {
 
 src_install() {
 	cd ${S}
-	dodoc BUGS CREDITS INSTALL README TODO
+	dodoc BUGS CREDITS README TODO
 
 	cd ${S}/src
 	dobin wmgtemp
