@@ -1,6 +1,13 @@
 # ChangeLog for x11-plugins/wmgtemp
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmgtemp/ChangeLog,v 1.8 2005/02/27 12:25:19 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmgtemp/ChangeLog,v 1.10 2005/11/10 09:13:51 s4t4n Exp $
+
+  10 Nov 2005; Michele Noberasco <s4t4n@gentoo.org> wmgtemp-0.7.ebuild,
+  wmgtemp-0.6.ebuild:
+  Removed INSTALL from dodoc.
+
+  27 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> wmgtemp-0.7.ebuild:
+  Dependency update: sys-apps/lm-sensors -> sys-apps/lm_sensors.
 
   27 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> wmgtemp-0.6.ebuild:
   Dependency update: sys-apps/lm-sensors -> sys-apps/lm_sensors.
